# SeveryanochkaBackend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  test.py
.github/workflows/: test_on_push.yaml
api/: dependencies.py
api/routers/: __init__.py  auth.py  brand.py  brands.py  categories.py  category.py  countries.py  country.py  customer.py  manufacturer.py  manufacturers.py  phone_key.py  phone_keys.py  user.py  users.py
api/schemas/: auth.py  brand.py  category.py  country.py  customer.py  manufacturer.py  other.py  phone_key.py  product.py  user.py
core/: security.py  unit_of_work.py
core/entities/: auth.py  base.py  brand.py  category.py  country.py  manufacturer.py  phone_key.py  product.py  user.py
core/exceptions/: auth.py  base.py  category.py  phone_key.py  user.py
core/repositories/: base.py  brand.py  category.py  country.py  manufacturer.py  phone_key.py  product.py  providers.py  user.py
core/services/: auth.py  brand.py  category.py  country.py  manufacturer.py  phone_key.py  providers.py  user.py
database/: base.py
database/migrations/: env.py
database/migrations/versions/: 087137a3838d_update_phone_key.py  1e146a310f97_add_product_with_auxiliary_tables.py  3886feac0553_update_category.py  47e19cd4d7c2_add_avatar_url_to_user.py  4f13916a02e9_make_name_and_last_name_nullable_in_.py  5ffb7a8eabf7_make_phone_unique_and_not_null_make_.py  7e45db0ac82d_init.py  a4588a6b43af_make_password_not_null.py  abf24f857fd8_add_birthday_to_user.py  bb8f5564ac8f_init.py  f20c4ecf3f1d_init.py
database/models/: __init__.py  brand.py  category.py  country.py  customer.py  manufacturer.py  phone_key.py  product.py  user.py
database/repositories/: base.py  brand.py  category.py  country.py  customer.py  manufacturer.py  phone_key.py  user.py
services/: unit_of_work.py
tests/: Dockerfile  conftest.py  docker-compose.yml  docker.py  docker_services.py  test.env  test_brand.py  test_category.py  test_country.py  test_manufacturer.py  test_phone_key.py  test_user.py
tests/test_brands/: conftest.py  test_brands.py
tests/test_categories/: conftest.py  test_categories.py
tests/test_countries/: test_countries.py
tests/test_manufacturers/: conftest.py  test_manufacturers.py
tests/test_phone_keys/: conftest.py  test_phone_keys.py
tests/test_users/: conftest.py  test_users.py
utils/: security.py  unit_of_work.py
