[tool.pytest.ini_options]
pythonpath = [
    ".",
]
asyncio_mode="auto"
filterwarnings = [
    'ignore::DeprecationWarning',
    # This warning occurs when testing endpoints that delete something,
    # since after the test runs in the fixture, deletion also occurs
    'ignore::sqlalchemy.exc.SAWarning',
]

[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
asyncpg = "^0.29.0"
alembic = "^1.12.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
gunicorn = "^21.2.0"
python-multipart = "^0.0.6"
pytest = "^7.4.4"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
