[tool.pytest.ini_options]
pythonpath = [
    ".",
]
asyncio_mode="auto"
filterwarnings = [
    'ignore::DeprecationWarning',
    # This warning occurs when testing endpoints that delete something,
    # since after the test runs in the fixture, deletion also occurs
    'ignore::sqlalchemy.exc.SAWarning',
]

[tool.poetry]
name = "SeveryanochkaBackend"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
asyncpg = "^0.29.0"
alembic = "^1.12.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
gunicorn = "^21.2.0"
python-multipart = "^0.0.7"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
pycountry = "^23.12.11"
pillow = "^10.2.0"
aiofiles = "^23.2.1"
sqlalchemy = {version = "^2.0.25", extras = ["asyncio"]}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.2"
pytest-docker = "^3.1.1"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
